layout bugfix

--- a/src/views/Categories/style.module.css
+++ b/src/views/Categories/style.module.css
@@ -1,69 +1,69 @@
 .grid {
-    /* display: grid;
-    margin: 30px;
-    align-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    gap: 25px; */
-    grid-area: cards;
-  }
+  grid-area: cards;
+}
+
+.card {
+  text-align: center;
+  aspect-ratio: 1/1;
+}
+
+.card div {
+  overflow: hidden;
+  background-image: url("https://images.pexels.com/photos/1547248/pexels-photo-1547248.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
   
-  .card {
-    text-align: center;
-    aspect-ratio: 1/1;
-  }
-  
-  .card div {
-    overflow: hidden;
-    background-image: url("https://images.pexels.com/photos/1547248/pexels-photo-1547248.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    
-  }
-  
-  .icon:hover {
-    cursor: pointer;
-  }
-  
+}
+
+.grid_wrapper {
+  display: grid;
+  grid-template-rows: min-content min-content min-content min-content min-content;
+  gap: 0px 0px;
+  grid-template-areas:
+    "header"
+    "search"
+    "welcome"
+    "title"
+    "cards";
+  height: 100vh;
+  margin: 0 auto;
+}
+
+.header {
+  grid-area: header;
+}
+
+.welcome {
+  grid-area: welcome;
+  margin: 1em;
+}
+.welcome h2 {
+  color: var(--main-cl);
+}
+.welcome h3 {
+  color: var(--main-cl-alt);
+}
+
+.search {
+  grid-area: search;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.title {
+  grid-area: title;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1em;
+}
+
+@media screen and (min-width: 900px) {
   .grid_wrapper {
-    display: grid; 
-    grid-template-rows: max-content max-content 1fr 1fr max-content; 
-    gap: 0px 0px; 
-    grid-template-areas: 
-      "header"
-      "search"
-      "welcome"
-      "title"
-      "cards"; 
-    height: 100vh;
+    width: 60%;
   }
-  
-  .header { grid-area: header; }
-  .welcome {
-    grid-area: welcome;
-    margin: 1em;
-  }
-  .welcome h2 {
-    color: var(--main-cl)
-  
-  }
-  .welcome h3 {
-    color: var(--main-cl-alt);
-  }
-  
-  .search {
-    grid-area: search;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .title {
-    grid-area: title;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin:1em;
-  }
+}
